syntax = "proto3";

import "google/protobuf/wrappers.proto";

option go_package = "github.com/goodguy-project/goodguy-core/idl";

enum OnlineJudge {
  OnlineJudge_Undefined = 0;
  OnlineJudge_Codeforces = 1;
  OnlineJudge_Atcoder = 2;
  OnlineJudge_Codechef = 3;
  OnlineJudge_Nowcoder = 4;
  OnlineJudge_Leetcode = 5;
  OnlineJudge_Luogu = 6;
  OnlineJudge_Vjudge = 7;
}

enum Op {
  Op_Nothing = 0;
  Op_Update = 1;
  Op_Delete = 2;
  Op_Add = 3;
}

message SubscribeStatus {
  google.protobuf.UInt64Value email = 1;
}

message SMTP {
  string host = 1;
  int32 port = 2;
  string pwd = 3;
}

// 队员信息
message Member {
  int64 id = 1;
  google.protobuf.StringValue sid = 2;
  google.protobuf.StringValue name = 3; // 姓名
  google.protobuf.StringValue school = 4; // 学校
  google.protobuf.Int32Value grade = 6; // 年级
  google.protobuf.StringValue clazz = 7; // 班级
  google.protobuf.BoolValue is_official = 9; // 是否校队成员

  google.protobuf.StringValue codeforces_id = 20; // Codeforces ID
  google.protobuf.StringValue atcoder_id = 21; // AtCoder ID
  google.protobuf.StringValue codechef_id = 22; // Codechef ID
  google.protobuf.StringValue nowcoder_id = 23; // Nowcoder ID（纯数字）
  google.protobuf.StringValue vjudge_id = 24; // Vjudge ID
  google.protobuf.StringValue leetcode_id = 25; // LeetCode ID
  google.protobuf.StringValue luogu_id = 26; // Luogu ID

  SubscribeStatus subscribe_status = 27;
  google.protobuf.BoolValue selfing_mode = 28; // 自交模式
  SMTP smtp = 29;

  google.protobuf.StringValue email = 30;
}

message GetOfficialMemberRequest {}

message Team {
  int64 id = 1; // ID
  repeated Member member = 2; // 成员
  string name = 3; // 队名
}

message GetOfficialMemberResponse {
  repeated Team team = 1;
}

message GetMemberRequest {
  int32 page_no = 1;
  int32 page_size = 2;

  repeated int64 id = 4;
  repeated string sid = 5;
}

message GetMemberResponse {
  repeated Member member = 1;
  int32 size = 2;
}

message LoginRequest {
  string sid = 1;
  string pwd = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  Member member = 1;
  string pwd = 2;
}

message RegisterResponse {
  string token = 1;
}

message UpdateMemberRequest {
  Member member = 1;
}

message UpdateMemberResponse {
}

message CheckTokenRequest {
  string token = 1;
}

message CheckTokenResponse {
  bool ok = 1;
  string sid = 2;
}

message AdminSetRequest {
  google.protobuf.StringValue open_register = 2;
}

message AdminSetResponse {
}

message AdminGetRequest {
}

message AdminGetResponse {
}

message CommonGetRequest {
}

message CommonGetResponse {
  bool open_register = 1; // 是否开放注册
}

service GoodguyWebService {
  rpc GetOfficialMember (GetOfficialMemberRequest) returns (GetOfficialMemberResponse); // 获取所有校队成员
  rpc GetMember (GetMemberRequest) returns (GetMemberResponse); // 获取成员

  rpc CheckToken (CheckTokenRequest) returns (CheckTokenResponse); // 检查token是否可用
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc UpdateMember (UpdateMemberRequest) returns (UpdateMemberResponse);

  rpc AdminSet (AdminSetRequest) returns (AdminSetResponse);
  rpc AdminGet (AdminGetRequest) returns (AdminGetResponse);
  rpc CommonGet (CommonGetRequest) returns (CommonGetResponse);
}
